[package]
name = "overpass_parser_rust"
version = "0.1.0"
edition = "2024"

authors = ["Frédéric Rodrigo <fred.rodrigo@gmail.com>"]
description = "An Overpass Query subset parser for Rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/teritorio/overpass_parser_rust"

[lib]
[[bin]]
name = "overpass2sql"
path = "src/bin.rs"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
derivative = "2.2.0"
regex = "1.11.1"
rust_string_utils = "0.1.20"

[dev-dependencies]
pretty_assertions = "1.4.1"
